[UPD[ insert-h1-in-header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <header>
+            <h1>Campo Minato</h1>
             <button id="start">Gioca</button>
         </header>
         <main>
