[UPD] insert-img-logo-in-header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <header>
+            <img class="img" src="./img/mobile-logo.png">
             <h1>Campo Minato</h1>
             <button id="start">Gioca</button>
         </header>
